--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,7 @@
 Version 1.2     -
-  - New EL function util:translate for translation with a resource bundle
   - New REST servlet with support for server API implementation
-  - Provide pre-defined beans in ASF contexts: requestScope
   - Add support for servlet requests to retrieve the body content as a stream
+  - Moved the Ada Servlet implementation outside of Ada Server Faces in a separate project
 
 Version 1.1     - Dec 2015
   - New EL function util:formatDate
