--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
-Version 1.2.1   -
+Version 1.3.0   -
+  - Rename GNAT project into servletada
   - Fix REST servlet when a 404 error is returned.
 
 Version 1.2     - Jul 2018
