--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 1.3.0   -
+Version 1.3.0   - Dec 2019
   - Rename GNAT project into servletada
   - Fix REST servlet when a 404 error is returned.
 
