--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 1.4.0   -
+  - Added support to configure the web container
+
 Version 1.3.0   - Dec 2019
   - Rename GNAT project into servletada
   - Fix REST servlet when a 404 error is returned.
