--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libservletada (1.5.1) unstable; urgency=medium
+
+  * Update with release 1.5.1
+
+ -- Stephane Carrez <Stephane.Carrez@gmail.com>  Sat, 13 Feb 2021 16:32:06 +0100
+
 libservletada (1.5.0) unstable; urgency=medium
 
   * Update with release 1.4.0
