--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libservletada (1.5.2) unstable; urgency=medium
+
+  * Update with release 1.5.2
+
+ -- Stephane Carrez <Stephane.Carrez@gmail.com>  Sun, 25 Jul 2021 17:32:06 +0100
+
 libservletada (1.5.1) unstable; urgency=medium
 
   * Update with release 1.5.1
